# ChangeLog for sys-apps/calculate-server
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*calculate-server-2.1.15-r2 (12 Dec 2011)

  12 Dec 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-server-2.1.15-r2.ebuild,
  +files/calculate-server-2.1.15-fix_proftpd.patch:
  Update for fix work with proftpd

*calculate-server-2.1.15-r1 (05 Dec 2011)

  05 Dec 2011; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  -calculate-server-2.1.15.ebuild, +calculate-server-2.1.15-r1.ebuild:
  remove radius dep

*calculate-server-2.1.15 (16 Nov 2011)

  16 Nov 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-server-2.1.15.ebuild:
  Version bump, update deps

  11 Oct 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  calculate-server-9999.ebuild:
  Update live ebuilds

*calculate-server-2.1.14-r6 (18 Jul 2011)

  18 Jul 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-server-2.1.14-r6.ebuild,
  +files/calculate-server-2.1.14-remote_distfiles.patch:
  Update for fix remote share point.

*calculate-server-2.1.14-r5 (14 Jul 2011)

  14 Jul 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-server-2.1.14-r5.ebuild,
  +files/calculate-server-2.1.14-fix_add_dns_rec.patch:
  Update for bugfix

*calculate-server-2.1.14-r4 (27 Jun 2011)

  27 Jun 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-server-2.1.14-r4.ebuild,
  +files/calculate-server-2.1.14-add_maildomain_group.patch:
  Update for creating maildomain group.

*calculate-server-2.1.14-r3 (24 Jun 2011)

  24 Jun 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-server-2.1.14-r3.ebuild:
  Update for fix dep.

*calculate-server-2.1.14-r2 (03 Jun 2011)

  03 Jun 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-server-2.1.14-r2.ebuild,
  +files/calculate-server-2.1.14-rename_param.patch:
  Update for rename param.

*calculate-server-2.1.14-r1 (31 May 2011)
