@@ -1,14 +1,14 @@
-commit b59c6e04000a15d7171a21a19a18e60a1a4e656b
+commit b36881f7b430342d8578f5aaaed442fa19949983
 Author: Mike Hiretsky <mh@calculate.ru>
-Date:   Mon Dec 12 13:39:21 2011 +0400
+Date:   Tue Dec 13 10:19:17 2011 +0400
 
-    Fix proftpd 1.3.4
+    Fix proftpd.conf
 
 diff --git a/profile/ftp/etc/proftpd/proftpd.conf b/profile/ftp/etc/proftpd/proftpd.conf
-index bbf59dc..0a6ee23 100644
+index bbf59dc..3a477b6 100644
 --- a/profile/ftp/etc/proftpd/proftpd.conf
 +++ b/profile/ftp/etc/proftpd/proftpd.conf
-@@ -69,9 +69,16 @@ DefaultRoot #-sr_ftp_path-#
+@@ -69,9 +69,20 @@ DefaultRoot #-sr_ftp_path-#
  </Anonymous>
  
  LDAPServer            #-os_net_hostname-#.#-os_net_domain-#
@@ -16,11 +16,15 @@ index bbf59dc..0a6ee23 100644
  LDAPDNInfo            "#-ld_ftp_dn-#" #-ld_ftp_pw-#
  LDAPAuthBinds         on
  LDAPDoAuth            on "uid=%v,ou=Users,#-ld_ftp_dn-#"
++!LDAPBindDN
++!LDAPUsers
 +#pkg#
 +#?pkg(net-ftp/proftpd)>=1.3.4#
 +LDAPBindDN            "#-ld_ftp_dn-#" #-ld_ftp_pw-#
 +LDAPAuthBinds         on
-+LDAPUsers             "uid=%v,ou=Users,#-ld_ftp_dn-# (uid=%v)
++LDAPUsers             "uid=%v,ou=Users,#-ld_ftp_dn-#" (uid=%v)
++!LDAPDNInfo
++!LDAPDoAuth
 +#pkg#
  LDAPDefaultAuthScheme SSHA
  LDAPGenerateHomedir off
