@@ -28,7 +28,8 @@ EBUILD calculate-utilities-2.2.26-r7.ebuild 873 RMD160 322e2102585109318f21a0931
 EBUILD calculate-utilities-2.2.26-r8.ebuild 873 RMD160 f820806548da2eed1e0e2eb430b80a0f599e7971 SHA1 f420ab95ef64bbe93898a488ea60526361cc14d2 SHA256 644c61f3fed44ab60b86e5b5c47cdddfbffcfca9ecfc7fe067a7fba43e0f06bc
 EBUILD calculate-utilities-2.2.26-r9.ebuild 879 RMD160 cbd90bc7a4c775bf6e235e38a08348dfe2419941 SHA1 dae3f0cdad9306eb7ee435a2b95d96bb80c906e4 SHA256 d76c6ee327ccea3c17870de9dec93e27359a260bd9930728e831da6f0a752723
 EBUILD calculate-utilities-2.2.26.ebuild 858 RMD160 689a2c02fbba4a04bc6103d21e1c28eea9c1b084 SHA1 ec3fdd0e02e7e24bf06286997cb41fdf861c034f SHA256 3e72263a6417c5bd713b5329d48fb0e2a26782a249c975ffc2bc3ddb1558e860
+EBUILD calculate-utilities-2.2.27-r1.ebuild 861 RMD160 70075e64c09a6ef6826aca6a87386ec40b1c4b31 SHA1 d181ca185f1fc8498eaf7043832d1d4cf32479ae SHA256 d70fe0cdac200fb91fd1092d55158f3e87584fa8c93c968fb2214be3999b3747
 EBUILD calculate-utilities-2.2.27.ebuild 861 RMD160 d840018012b50f856de0042966facf8ee93007b9 SHA1 3f805525a322977dcb6cc442dcd933c90855c175 SHA256 1a2a97e4dde488e880820a5a97ff974ae3dd068c2d894a9b962c35d24dad4eec
 EBUILD calculate-utilities-2.2.9999.ebuild 842 RMD160 f2c0fdc1068614b71a37f2226dcde4883ebd2876 SHA1 99f673a52934f552589baf6d12ed9bffc03b8ebd SHA256 56d97b7d2ce11d23b25d9036b4e2ee196b547ce1d11b0cc349a8205515b66bf1
 EBUILD calculate-utilities-3.0.9999.ebuild 441 RMD160 ec17f871ec70a322cff866048e50c150931e0e95 SHA1 d0e036ba01e6a71ad14e6f3e6735bbd0f325df99 SHA256 30c6cd4ce478016cb75458314ea4e745ccb1501be33f14c3a2593d9d0e670c9c
-MISC ChangeLog 36047 RMD160 f75acb32bdc69bbdbf56a3d08e12d31f4e775bff SHA1 ba9a45abf4629bf8557ba98c802a33b8932a499e SHA256 e5ffbfcf711bbe91c05fbe9c4f895b4a310edeb27090395e1661ad7facfe28a1
+MISC ChangeLog 36215 RMD160 7cc29b772c2127a28bb144aade0a038689eac590 SHA1 93450eeb3324496c3312fad8d85b786ddc466e06 SHA256 f44c7a27a68fc24ef64b143c71beb44a705d4843aa3bda26bccfa0bd8b078d63
