@@ -2,6 +2,12 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*calculate-utilities-2.2.27-r1 (13 Dec 2011)
+
+  13 Dec 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
+  +calculate-utilities-2.2.27-r1.ebuild:
+  Update for server
+
 *calculate-utilities-2.2.27 (12 Dec 2011)
 
   12 Dec 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
